.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/echosign_dev1__Library_Template__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
        <relationshipName>Library_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Document_Key__c</fullName>
        <label>Document Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Last_Modified__c</fullName>
        <label>Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Reference_Type__c</fullName>
        <label>Reference Type</label>
        <picklist>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form Field Layer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form Field Layer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Library Template</label>
    <nameField>
        <label>Library Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Library Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>